# FastAPI-demo

./: .env  README.md  main.py  pyproject.toml
